# text-to-sql

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  interview_text_to_sql_narrative.md  pyproject.toml
blog/llmops_sql_adapter_case_study/: 01_measurement_boundary.md  02_data_changes_are_production_changes.md  03_llmops_loop_is_the_product.md  04_dataset_contracts_make_inputs_enforceable.md  05_manifest_recipe_cli_control_surface.md  06_eval_design_is_the_backbone.md  07_serving_contract_is_a_separate_failure_mode.md  08_promotion_and_rollback_are_state_changes.md  09_endpoint_eval_and_load_testing.md  10_observability_and_monitoring.md  (+1 more)
cloudbuild/: sqlbench-dev-cli.yaml  sqlbench-vllm.yaml
docker/: sqlbench-dev-cli.Dockerfile  sqlbench-vllm-entrypoint.py  sqlbench-vllm.Dockerfile
docs/: LIVESQLBENCH_COMPETITION.md  OBSERVABILITY.md  README.md  SQL_PIPELINE_PARTS.md  SQL_TRAINING_PIPELINE.md  TOOLING_ROADMAP_LINEAR_DRAFTS.md  livesqlbench_competition.md
flows/: sql_adapter_offline_dev_flow.py
notebooks/: README.md  sql_exp002_to_exp004_explorer.ipynb  sql_local_serving_kv_cache_walkthrough.ipynb  sql_sft_training_loop.ipynb  storefront_single_db_training_story.ipynb
schemas/: sql_correction_example_v1.schema.json  sql_eval_case_v1.schema.json  sql_eval_case_v2.schema.json  sql_repair_example_v1.schema.json  sql_sft_experiment_v1.schema.json  sql_sft_experiment_v2.schema.json  sql_train_example_v1.schema.json  sql_train_example_v2.schema.json
scripts/: create_sql_isft_blacksmith_pilot.py  create_storefront_alias_binding_contrast.py  create_storefront_customer_first_alias_curriculum.py  create_storefront_customer_first_mixture.py  create_storefront_customer_first_weighted_mixture.py  create_storefront_sql_lab.py  create_storefront_sql_train_v6.py  run_sql_experiment_queue.py  run_sql_prompt_candidate_queue.py
separate_projects/db_sql_agent_env/: pyproject.toml
separate_projects/db_sql_agent_env/src/db_sql_agent_env/: __init__.py  analysis.py  cli.py  env.py  evaluator.py  import_seed.py  jsonl.py  loaders.py  models.py  schema_inspector.py
separate_projects/db_sql_agent_env/tests/: test_env.py
src/play_poker/: __init__.py  (+1 more)
tests/: test_docs_site.py  test_livesqlbench_submission.py  test_mlops_base_model_mirror.py  test_mlops_container_contract.py  test_mlops_contract.py  test_mlops_dev_cloud_contracts.py  test_mlops_gcs_sync.py  test_mlops_offline_dev_flow.py  test_pipeline.py  test_sql_pipeline.py  test_sql_query_app.py  test_storefront_alias_binding_contrast.py  test_storefront_customer_first_alias_curriculum.py
(+227 files in other folders)
