[project]
name = "sqlbench-lab"
version = "0.1.0"
description = "SQL training and LiveSQLBench experimentation workspace"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
]

[project.scripts]
sqlbench-lab = "sqlbench_lab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
sqlbench_lab = "src/sqlbench_lab"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlbench_lab*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]
training = [
    "accelerate>=1.10.0",
    "peft>=0.17.0",
    "torch>=2.7.0",
    "transformers>=4.57.1",
]
