[project]
name = "sqlbench-first-loop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sqlbench-first-loop = "sqlbench_lab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.3"]
training = [
    "accelerate>=1.10",
    "peft>=0.19",
    "torch>=2.7",
    "transformers>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
