[project]
name = "db-sql-agent-env"
version = "0.1.0"
description = "Minimal DB-specific SQL agent environment step package"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
db-sql-agent-env = "db_sql_agent_env.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
db_sql_agent_env = "src/db_sql_agent_env"

[tool.setuptools.packages.find]
where = ["src"]
include = ["db_sql_agent_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
